# tasknotify

./: README.md  pyproject.toml  tasknotify.py
tests/: test_tasknotify.py
