[project]
name = "tasknotify"
version = "0.1.0"
description = "Headless notify"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyGObject",
    "psutil>=5.3.0",
]

[project.scripts]
tasknotify = "tasknotify:main"

[dependency-groups]
dev = [
    "black",
    "isort",
    "mypy",
    "pygobject-stubs",
    "types-psutil",
]

[tool.isort]
profile = "black"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true

disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
