[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tasknotify"
version = "0.1.0"
description = "Headless notify"
authors = [
    {name = "Dylan Maltby"},
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "PyGObject",
    "psutil>=5.3.0",
]

[project.scripts]
tasknotify = "tasknotify:main"

[dependency-groups]
dev = [
    "black",
    "isort",
    "mypy",
    "pygobject-stubs",
    "types-psutil",
]

[tool.flit.sdist]
include = [
    "tests/",
]

[tool.isort]
profile = "black"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true

disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
